2006-03-29  David Reveman  <davidr@novell.com>

	* src/event.c (handleEvent):
	* include/compiz.h:
	* src/window.c: Set allowed window actions more correctly.

	* plugins/move.c: Add opacity option.

	* plugins/Makefile.am: Add water plugin. It's not very useful yet
	and it needs more work but it's a good example of how to use
	GL_ARB_fragment_program and GL_EXT_framebuffer_object for visual
	effects.

	* src/screen.c (addScreen): Fix light position.

	* src/paint.c (paintWindow):
	* plugins/switcher.c (switchPaintThumb):
	* plugins/decoration.c (decorPaintWindow):
	* include/compiz.h: Make drawWindowTexture a screen function so that
	plugins can wrap it.

	* src/texture.c (enableTexture):
	* src/screen.c (addScreen):
	* include/compiz.h: GL_EXT_framebuffer_object and
	GL_ARB_fragment_program support.

2006-03-21  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (lower_window): Don't
	try to lower a window below hidden windows or desktop windows.

2006-03-20  David Reveman  <davidr@novell.com>

	* plugins/wobbly.c (wobblyHandleEvent):
	xunmap -> xmap (François Ingelrest).

	* src/screen.c (isClientListWindow): All type of windows should go into
	the client lists (Thanks to Quinn Storm).

	* src/window.c (freeWindow): Destroy frame window.
	(mapWindow): Fix so the sync requests are sent correctly when a window
	is mapped but disable it for now as it seems to be causing problems
	with some applications.
	(recalcWindowActions): Allow dialog window actions on util and
	toolbar windows.

	* src/event.c (handleEvent): Remove event mask and button grabs
	when window is reparented.
	(handleEvent): Update client list when window type changes.
	(handleEvent): Use constrainNewWindowSize on move/resize client
	messages and configure requests.

	* gnome/window-decorator/gnome-window-decorator.c (window_closed):
	Delete decor property when window is closed.

2006-03-17  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: David Reveman
